--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h5>Hello world!</h5>
-<app-home></app-home>
-<app-about></app-about>
-<app-contact></app-contact>
+<router-outlet></router-outlet>
+
