--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,7 +1,4 @@
 <h1>Posts</h1>
-<ul class="list-group" *ngFor="let message of messages |async">
-  <li>
-    <h2>{{ message.title }}</h2>
-    <p>{{ message.body }}</p>
-  </li>
+<ul class="list-group">
+  <app-post *ngFor="let message of messages |async" [message]="message"></app-post>
 </ul>
