--- a/src/app/pages/posts/post/post.component.html
+++ b/src/app/pages/posts/post/post.component.html
@@ -1,4 +1,5 @@
-  <li class="list-group-item mt-2">
+  <li (click)="onClick()"
+    class="list-group-item mt-2">
     <h2>{{ message.title }}</h2>
     <p>{{ message.body }}</p>
   </li>
