módulo de componenetes

--- a/components/src/app/components/header/header.component.html
+++ b/components/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<app-header text="alert"></app-header>
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button
@@ -7,10 +6,6 @@
         color="primary"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title>alert</ion-title>
+    <ion-title class="ion-text-capitalize">{{ text }}</ion-title>
   </ion-toolbar>
-</ion-header> -->
-
-<ion-content>
-
-</ion-content>
+</ion-header>
