--- a/components/src/app/pages/action-sheet/action-sheet.page.html
+++ b/components/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,6 +1,6 @@
-<ion-header>
+<app-header text="action sheet"></app-header>
+<!-- <ion-header>
   <ion-toolbar>
-
     <ion-buttons slot="start">
       <ion-back-button
         defaultHref="/"
@@ -9,10 +9,9 @@
         mode="ios"
       ></ion-back-button>
     </ion-buttons>
-
     <ion-title>action-sheet</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
 
