--- a/components/src/app/pages/home/home.page.html
+++ b/components/src/app/pages/home/home.page.html
@@ -5,10 +5,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-button routerLink="/alert">
-    Alert
-  </ion-button>
-  <ion-button routerLink="/action-sheet">
-    Action Sheet
-  </ion-button>
+  <ion-list>
+    <ion-item
+      class="ion-text-capitalize"
+      *ngFor="let component of components"
+      [routerLink]="component.redirecTo"
+      detail="true"
+    >
+      <ion-icon
+        [name]="component.icon"
+        slot="start"
+      ></ion-icon>
+      {{ component.name }}
+    </ion-item>
+  </ion-list>
 </ion-content>
