--- a/components/src/app/pages/home/home.page.html
+++ b/components/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list lines="full">
     <ion-item
       class="ion-text-capitalize"
       *ngFor="let component of components"
