--- a/components/src/app/pages/alert/alert.page.html
+++ b/components/src/app/pages/alert/alert.page.html
@@ -11,6 +11,9 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <div class="container">
+    <ion-button (click)="showAlert()">Show</ion-button>
+    <ion-button (click)="presentAlertForm()">Show alert form</ion-button>
+  </div>
 </ion-content>
