--- a/components/src/app/pages/home/home.page.html
+++ b/components/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title class="ion-text-capitalize">home</ion-title>
   </ion-toolbar>
 </ion-header>
 
